fixed overflow on mobile view

--- a/css/style.css
+++ b/css/style.css
@@ -21,6 +21,7 @@ body {
   color: #333;
   font-size: 13px;
   line-height: 18px;
+  overflow-x:hidden
 }
 
 header{
